--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,23 +1,29 @@
-# Variables
+
 CC=$(CROSS_COMPILE)gcc
-CFLAGS=-Wall -Wextra -g
+
+CFLAG=-Wall -Wextra -g
 TARGET=writer
+
 SRCS=writer.c
+
 OBJS=$(SRCS:.c=.o)
 
-# Default target
+#Default target
+
 .PHONY: default
 default: $(TARGET)
 
-# Build the target
+# Bild the target
+
 $(TARGET): $(OBJS)
-	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS)
+	$(CC) $(CFLAG) -o $(TARGET) $(OBJS)
 
 # Compile .c files to .o files
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAG) -c $< -o $@
 
 # Clean up
+
 .PHONY: clean
 clean:
 	rm -f $(TARGET) $(OBJS)
