--- a/server/Makefile
+++ b/server/Makefile
@@ -1,14 +1,20 @@
-CC = gcc
+CC = aarch64-none-linux-gnu-gcc  # Use ARM64 cross-compiler
+
 CFLAGS = -Wall -Wextra -g
 TARGET = aesdsocket
 
-.PHONY: all clean
+SRCS = aesdsocket.c
+OBJS = $(SRCS:.c=.o)
 
+.PHONY: all
 all: $(TARGET)
 
-$(TARGET): aesdsocket.c
-	$(CC) $(CFLAGS) -o $(TARGET) aesdsocket.c
+$(TARGET): $(OBJS)
+	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS)
 
+%.o: %.c
+	$(CC) $(CFLAGS) -c $< -o $@
+
+.PHONY: clean
 clean:
-	rm -f $(TARGET)
-
+	rm -f $(TARGET) $(OBJS)
